# NPC_IDE

./: .gitignore  CMakeLists.txt  README.md  demo_code_editor.pro
include/: main.h
include/device/: npc.h  reg.h  timer.h  vga.h  vmem.h
include/monitor/: monitor.h
include/monitor/sdb/: expr.h  sdb.h  watchpoint.h
include/monitor/tools/: difftest.h  ftrace.h
include/sdb/: common.h  difftest.h  disasm.h  ftrace.h  monitor.h  npc.h  sdb.h  utils.h  vmem.h
include/ui/: codeeditor.h  csrmonitor.h  filesystemmodel.h  gprmonitor.h  highlighter.h  instmonitor.h  main.h  mainwindow.h  memviewer.h  mycodeeditor.h  myfilesystemmodel.h  myhighlighter.h  mysplitterlayout.h  mytextedit.h  mytexteditbycode.h  mytreeview.h  splitterlayout.h  treeview.h
include/utils/: common.h  disasm.h
res/: images.qrc
res/config/: keywords.txt
src/: CMakeLists.txt  main.cpp
src/device/: npc.cpp  reg.cpp  timer.cpp  vga.cpp  vmem.cpp
src/monitor/: monitor.cpp
src/monitor/sdb/: expr.cpp  sdb.cpp  watchpoint.cpp
src/monitor/tools/: difftest.cpp  ftrace.cpp
src/sdb/: difftest.cpp  disasm.cpp  expr.cpp  ftrace.cpp  monitor.cpp  npc.cpp  sdb.cpp  vmem.cpp  watchpoint.cpp
src/ui/: codeeditor.cpp  csrmonitor.cpp  filesystemmodel.cpp  gprmonitor.cpp  highlighter.cpp  instmonitor.cpp  main.cpp  mainwindow.cpp  memviewer.cpp  mycodeeditor.cpp  myfilesystemmodel.cpp  myhighlighter.cpp  mysplitterlayout.cpp  mytextedit.cpp  mytexteditbycode.cpp  mytreeview.cpp  splitterlayout.cpp  treeview.cpp
src/utils/: disasm.cpp
src/vsrc/: ALU.v  BU.v  CMakeLists.txt  CPU.v  CU.v  IDU.v  IFU.v  PC.v  REF.v
ui/: mainwindow.ui  mytextedit.ui
